// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading Loading base demo works fine 1`] = `
<base>
  <wx-view
    class="loading-container-flex"
  >
    <t-loading
      class="wrapper"
      size="40rpx"
      theme="circular"
    />
    <t-loading
      class="wrapper"
      size="40rpx"
      theme="spinner"
    />
    <t-loading
      class="wrapper"
      size="80rpx"
      theme="dots"
    />
    <t-loading
      class="wrapper"
      theme="custom"
    >
      <t-image
        slot="indicator"
        src="https://tdesign.gtimg.com/mobile/demos/logo2.png"
        style="width: 100%; height: 100%"
      />
    </t-loading>
  </wx-view>
</base>
`;

exports[`Loading Loading duration demo works fine 1`] = `
<duration>
  <t-loading
    duration="{{1200}}"
    size="52rpx"
    tClassText="text-l"
    text="加载中..."
    theme="circular"
  />
  <wx-view
    class="slider-container"
  >
    <t-slider
      class="slider-class"
      label="{{true}}"
      max="{{1500}}"
      min="{{100}}"
      value="{{800}}"
      bind:change="durationChange"
    />
  </wx-view>
</duration>
`;

exports[`Loading Loading horizontal demo works fine 1`] = `
<horizontal>
  <wx-view
    class="loading-container-flex"
  >
    <t-loading
      class="wrapper"
      size="40rpx"
      text="加载中..."
      theme="circular"
    />
    <t-loading
      class="wrapper"
      inheritColor="{{true}}"
      size="40rpx"
      text="加载中..."
      theme="spinner"
    />
  </wx-view>
</horizontal>
`;

exports[`Loading Loading size demo works fine 1`] = `
<size>
  <wx-view
    class="loading-size-demo"
  >
    <t-loading
      class="large"
      size="64rpx"
      text="加载中..."
      theme="circular"
    />
    <wx-view
      class="demo-desc"
    >
      中尺寸
    </wx-view>
    <t-loading
      class="middle"
      size="56rpx"
      text="加载中..."
      theme="circular"
    />
    <wx-view
      class="demo-desc"
    >
      小尺寸
    </wx-view>
    <t-loading
      size="48rpx"
      text="加载中..."
      theme="circular"
    />
  </wx-view>
</size>
`;

exports[`Loading Loading text demo works fine 1`] = `
<wx-text>
  <t-loading
    indicator="{{false}}"
    text="加载中..."
  />
</wx-text>
`;

exports[`Loading Loading vertical demo works fine 1`] = `
<vertical>
  <div
    class="box"
  >
    <t-loading
      class="wrapper"
      layout="vertical"
      size="40rpx"
      text="加载中"
      theme="circular"
    />
    <t-loading
      class="wrapper"
      layout="vertical"
      size="40rpx"
      text="加载中"
      theme="spinner"
    />
  </div>
</vertical>
`;
